--- a/figma.html
+++ b/figma.html
@@ -190,7 +190,7 @@
                 <p>Copyright &copy; 2024 All Rights Reserved by Code Connect | <a href="#">Privacy Policy</a> | <a href="#">Disclaimer</a></p>
             </div>
             <div class="right">
-                <p class="website-design">Website Design by Marameo Design</p>
+                <p class="website-design">Website Design by <a href="#">Marameo Design</a></p>
             </div>
         </div>
     </footer>
